appId: app.witchsky
---
- runScript:
    file: ../../setupServer.js
    env:
      SERVER_PATH: ?users&follows&posts&feeds
- runFlow:
    file: ../../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

- tapOn:
    id: "postDropdownBtn"
    index: 0
- tapOn:
    id: "postDropdownReportBtn"
- tapOn:
    id: "report:category:Misleading"
- tapOn:
    id: "report:option:Spam"
- assertVisible:
    text: "Send report to Dev-env Moderation"
- tapOn:
    id: "report:submit"
- extendedWaitUntil:
    notVisible:
      id: "report:dialog"
    timeout: 20000
